<resources>
    <string name="app_name">Dota2 Assistant</string>
    <string name="language">english</string>
    <string name="banner_ad_unit_id">ca-app-pub-1818774973864163/5531434737</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-1818774973864163/7883981930</string>
    <string name="loading">Loading…</string>
    <string name="loading_complete">Loading completed</string>
    <string name="error_during_load">There was an error during loading</string>
    <string name="info">INFO</string>
    <string name="skills">SKILLS</string>
    <string name="melee">{0} (Melee)</string>
    <string name="level">Level</string>
    <string name="hp">Hit points</string>
    <string name="mp">Mana</string>
    <string name="damage">Damage</string>
    <string name="armor">Armor</string>
    <string name="attacks_per_second">Attacks/second</string>
    <string name="movespeed">Movement Speed</string>
    <string name="attack_range">Attack Range</string>
    <string name="turn_rate">Turn rate</string>
    <string name="sight_range">Sight range (day/night)</string>
    <string name="attack_duration">Attack duration</string>
    <string name="cast_duration">Cast duration</string>
    <string name="missile_speed">Missile Speed</string>
    <string name="instant">Instant</string>
    <string name="back_toast">Click BACK again to exit</string>
    <string name="makes_from">Recipe</string>
    <string name="makes_to">Reqired for</string>
    <string name="cd">Cooldown:</string>
    <string name="mc">Mana cost:</string>
    <string name="recipe">Recipe</string>
    <string name="starting_items">STARTING ITEMS</string>
    <string name="starting_items_secondary">STARTING ITEMS SECONDARY</string>
    <string name="early_game">EARLY GAME</string>
    <string name="early_game_secondary">EARLY GAME SECONDARY</string>
    <string name="core_items">CORE ITEMS</string>
    <string name="core_items_secondary">CORE ITEMS SECONDARY</string>
    <string name="luxury_items">LUXURY</string>
    <string name="default_guide">ITEMS</string>
    <string name="guides">GUIDES</string>
    <string name="nickname">Player\'s nickname</string>
    <string name="kills"><b>Kills:</b></string>
    <string name="deaths"><b>Deaths:</b></string>
    <string name="assists"><b>Assists:</b></string>
    <string name="gold"><b>Gold:</b></string>
    <string name="last_hits"><b>Last hits:</b></string>
    <string name="denies"><b>Denies:</b></string>
    <string name="gpm"><b>GPM:</b></string>
    <string name="xpm"><b>XPM:</b></string>
    <string name="radiant">RADIANT</string>
    <string name="dire">DIRE</string>
    <string name="dire_win">Dire team win</string>
    <string name="radiant_win">Radiant team win</string>
    <string name="common">COMMON</string>
    <string name="empty_player_list">If You would like to see your statistics, \n
        You need to open Dota 2 client, \n
        click Settings icon->Options \n
        and set Expose Public Match Data to On. \n
        After some time You\'ll be able to search game history by your dota2 nickname.</string>
    <string name="empty_player_group_list">Add players to your group list \n
        (press + after searching for player on SEARCH tab),\n
        to see them here.
    </string>
    <string name="search_history">Search history:</string>
    <string name="heroes_search">Search by heroes</string>
    <string name="nick_search">Search by nickname</string>
    <string name="abandoned">Abandoned game</string>
    <string name="leaved">Clicked leave</string>
    <string name="disconnected">Disconnected</string>
    <string name="afk">AFK</string>
    <string name="never_connected">Never connected</string>
    <string name="never_connected_too_long">Too long to connect</string>
    <string name="match_id_">Match id:</string>
    <string name="match_id">Match id</string>
    <string name="start_time">Start time:</string>
    <string name="match_length">Match length:</string>
    <string name="lobby_type">Lobby type:</string>
    <string name="game_mode">Game mode:</string>
    <string name="bot">Bot</string>
    <string name="hero_damage"><b>Hero damage:</b></string>
    <string name="hero_healing"><b>Hero healing:</b></string>
    <string name="tower_damage"><b>Tower damage:</b></string>
    <string name="unknown_nickname">Nickname unknown</string>
    <string name="skill_build">SKILL BUILD</string>
    <string name="grid_carousel">Grid\carousel</string>
    <string name="item_build">ITEM BUILD</string>
    <string name="tooltips">TOOLTIPS</string>
    <string name="guide">Guide:</string>
    <string name="tooltips_for_skills">For skills:</string>
    <string name="tooltips_for_items">For items:</string>
    <string name="filter">FILTER</string>
    <string name="add_player_title">Add player to list</string>
    <string name="delete_player_title">Delete player from list</string>
    <string name="delete_player_msg">Are You sure You want to delete {0} from Your lists?</string>
    <string name="delete">Delete</string>
    <string name="responses">RESPONSES</string>
    <string name="response_search">Search by response</string>
    <string name="response_dialog_title">Action with response</string>
    <string name="file_saving_error">File saving error</string>
    <string name="ringtone_set">Ringtone has been set!</string>
    <string name="loading_response_error">Error on loading response</string>
    <string name="match_history_closed">Cannot get match history for a user that hasn\'t allowed it</string>
    <string name="download">Download</string>
    <string name="invert_selection">Invert selection</string>
    <string name="attempt">Attempts:</string>
    <string name="score">Score:</string>
    <string name="wrong">Wrong!</string>
    <string name="quiz">QUIZ</string>
    <string name="choose_items_from">Test Your Dota 2 items knowledge</string>
    <string name="choose_hero_skill">Choose ability of this hero</string>
    <string name="by_items">By items</string>
    <string name="by_abilities">By abilities</string>
    <string name="by_random">Random</string>
    <string name="record_attempt">With time limit</string>
    <string name="seconds_remaining">Time left: {0} sec.</string>
    <string name="record_attempt_help">You\'ll have 3 attempts and 60 seconds time limit. \n
        Each correct answer will increase your time limit for 0.5 sec.</string>
    <string name="guide_name">Guide title</string>
    <string name="attention">Attention</string>
    <string name="guide_creator_message">Guides contains 2 parts:\n
        -Items\n
        -Abilities\n
        On Items tab You can add up to 6 game stages. For each item You can add a tooltip (click on added item).\n
        On Abilities tab You should set, which ability should be taken and on which level. By clicking on ability icon You can add a tooltip for it.\n
        After saving guide You can send it to me via email (from Hero guides screen), so I can add it to apk. I won\'t add guides without tooltips!
    </string>
    <string name="guide_next">Next</string>
    <string name="add_guide">Add guide</string>
    <string name="save">Save</string>
    <string name="add_game_part">Add game part</string>
    <string name="sure_delete_part">Are You sure, You wanna delete this part?</string>
    <string name="game_part_name">Game part name</string>
    <string name="select_action">Select action</string>
    <string name="add_tooltip">Add tooltip</string>
    <string name="add">Add</string>
    <string name="skill_tooltip">Skill tooltip</string>
    <string name="guide_saved">Guide saved!</string>
    <string name="edit_guide">Edit guide</string>
    <string name="delete_guide">Delete guide</string>
    <string name="guide_deleted">Guide deleted</string>
    <string name="guide_deletion_error">Deleting guide error</string>
    <string name="result">Result:</string>
    <string name="record_with_win_rate">Total score: {0}-{1} ({2})</string>
    <string name="win">Win</string>
    <string name="lost">Lost</string>
    <string name="highest_gold">Highest number of Gold:</string>
    <string name="highest_gpm">Highest Gold Per Minute:</string>
    <string name="highest_experience">Highest number of Experience:</string>
    <string name="highest_xpm">Highest Experience Per Minute:</string>
    <string name="highest_kills">Highest number of Kills:</string>
    <string name="highest_kills_pm">Highest Kills Per Minute:</string>
    <string name="highest_deaths">Highest number of Deaths:</string>
    <string name="highest_deaths_pm">Highest Deaths Per Minute:</string>
    <string name="highest_assists">Highest number of Assists:</string>
    <string name="highest_assists_pm">Highest Assists Per Minute:</string>
    <string name="highest_last_hits">Highest number of Last Hits:</string>
    <string name="highest_lh_pm">Highest Last Hits Per Minute:</string>
    <string name="highest_denies">Highest number of Denies:</string>
    <string name="highest_denies_pm">Highest Denies Per Minute:</string>
    <string name="highest_hd">Highest Hero Damage:</string>
    <string name="highest_hd_pm">Highest Hero Damage Per Minute:</string>
    <string name="highest_hh">Highest Hero Healing:</string>
    <string name="highest_hh_pm">Highest Hero Healing Per Minute:</string>
    <string name="longest_match_duration">Longest Match Duration:</string>
    <string name="highest_td">Highest Tower Damage:</string>
    <string name="highest_td_pm">Highest Tower Damage Per Minute:</string>
    <string name="best_kda">Best KDA Ration:</string>
    <string name="highest_kill_participation">Highest Kill Participation:</string>
    <string name="longest_win_streak">Longest Winning Streak:</string>
    <string name="longest_lost_streak">Longest Losing Streak:</string>
    <string name="kills_">Kills: {0}</string>
    <string name="deaths_">Deaths: {0}</string>
    <string name="assists_">Assists: {0}</string>
    <string name="gold_">Gold: {0}</string>
    <string name="last_hits_">Last hits: {0}</string>
    <string name="denies_">Denies: {0}</string>
    <string name="gpm_">GPM: {0}</string>
    <string name="xpm_">XPM: {0}</string>
    <string name="experience_">Experience: {0}</string>
    <string name="hero_damage_">Damage: {0}</string>
    <string name="hero_healing_">Healed: {0}</string>
    <string name="tower_damage_">Damage: {0}</string>
    <string name="match_length_">Match length: {0}</string>
    <string name="kda_">KDA: {0}</string>
    <string name="kill_participation_">KP: {0}</string>
    <string name="win_streak_">Winning Streak: {0}</string>
    <string name="lost_streak_">Losing Streak: {0}</string>
    <string name="change_language">Change app language</string>
    <string name="refresh">Refresh</string>
    <string name="show_results">Show results</string>
    <string name="time">Time:</string>
    <string name="match_type">Match type:</string>
    <string name="metric">Stats type:</string>
    <string name="hero_header">Hero</string>
    <string name="gpm_header">Gold / Minute</string>
    <string name="player">Player</string>
    <string name="not_now">Not now</string>
    <string name="find_me_on_dotabuff">Find me on Dotabuff</string>
    <string name="login_with_steam">Login with Steam</string>
    <string name="tab_hero">HERO</string>
    <string name="tab_counter_pick">Counter Pick</string>
    <string name="tab_quiz">Quiz</string>
    <string name="tab_menu">Menu</string>
    <string name="quiz_high_score_title_ranking">Ranking</string>
    <string name="quiz_high_score_title_name">Name</string>
    <string name="quiz_high_score_title_flag">Flag</string>
    <string name="quiz_high_score_title_nation_name">Nation</string>
    <string name="quiz_high_score_title_score">Score</string>
    <string name="quiz_high_score_title_date">Date</string>
    <string name="quiz_high_score">High score records</string>
    <string name="quiz_ranking_change_status">Status</string>
</resources>