<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top">

        <LinearLayout
            android:id="@+id/buttonsHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/quiz_background">
            </ImageView>

            <CheckBox
                android:id="@+id/setTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/avatar_smaller"
                android:text="@string/record_attempt"
                android:checked="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/for_record_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_view_padding"
                android:gravity="center"
                android:text="@string/record_attempt_help"
                android:visibility="gone" />

            <Button
                android:id="@+id/by_items"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/by_items" />

            <Button
                android:id="@+id/by_skills"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/by_abilities" />

            <Button
                android:id="@+id/by_random"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/by_random" />

            <Button
                android:id="@+id/btnHighScoreChart"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/quiz_high_score" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

               <!-- <com.google.android.gms.ads.AdView
                    android:id="@+id/ad_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id" />-->
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>