<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Layout.FillWidthHeight">


    <RelativeLayout
        android:id="@+id/rlHeader"
        style="@style/Layout.FillWidth"
        android:layout_below="@+id/llHeader"
        android:background="@color/bg_cmn_gray">

        <LinearLayout
            style="@style/Layout.FillWidth"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/padding_small">

            <LinearLayout
                style="@style/Layout.FillWidthHeight.Weight.VerticalCenter"
                android:layout_weight="1.2">

                <TextView
                    style="@style/Text.Small.Dark"
                    android:gravity="center"
                    android:text="@string/quiz_high_score_title_ranking" />
            </LinearLayout>

            <LinearLayout
                style="@style/Layout.FillWidthHeight.Weight.VerticalCenter"
                android:layout_weight="0.85">

                <TextView
                    style="@style/Text.Small.Dark"
                    android:gravity="center"
                    android:text="@string/quiz_high_score_title_name" />
            </LinearLayout>


            <LinearLayout
                style="@style/Layout.FillWidthHeight.Weight.VerticalCenter"
                android:layout_weight="1.1">

                <TextView
                    style="@style/Text.Small.Dark"
                    android:gravity="center"
                    android:text="@string/quiz_high_score_title_flag" />
            </LinearLayout>


            <LinearLayout
                style="@style/Layout.FillWidthHeight.Weight.VerticalCenter"
                android:layout_weight="1.2">

                <TextView
                    style="@style/Text.Small.Dark"
                    android:gravity="center"
                    android:text="@string/quiz_high_score_title_score" />
            </LinearLayout>

            <LinearLayout
                style="@style/Layout.FillWidthHeight.Weight.VerticalCenter"
                android:layout_weight="1.2">

                <TextView
                    style="@style/Text.Small.Dark"
                    android:gravity="center"
                    android:text="@string/quiz_ranking_change_status" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <View style="@style/divider_no_margin" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerRankingPlayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlHeader"
        tools:listitem="@layout/rankingteam_row" />

    <LinearLayout
        android:id="@+id/llHeader"
        style="@style/Layout.FillWidth"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal">

        <Spinner
            android:id="@+id/spinnerTypeRanking"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:entries="@array/ranking_type" />
    </LinearLayout>


</RelativeLayout>