<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/clickableItemBackground"
    android:orientation="horizontal"
    android:padding="@dimen/view_padding">

    <ImageView
        android:id="@+id/player_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/player" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/view_padding"
        android:layout_marginStart="@dimen/view_padding"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/add_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/add"
        android:src="@drawable/ic_menu_add" />

    <TextView
        android:id="@+id/group_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="?attr/colorPrimary"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/delete_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_menu_delete"
        android:visibility="gone" />
</LinearLayout>