<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_view_padding"
                android:text="@string/time" />

            <Spinner
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_view_padding" />

            <TextView
                android:id="@+id/game_mode_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_view_padding"
                android:text="@string/game_mode" />

            <Spinner
                android:id="@+id/game_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_view_padding" />

            <!--               <TextView
                                   android:layout_height="wrap_content"
                                   android:layout_width="wrap_content"
                                   android:layout_margin="5dp"
                                   android:text="@string/match_type"
                                   android:id="@+id/match_type_header"/>

                           <Spinner
                                   android:layout_height="wrap_content"
                                   android:layout_width="wrap_content"
                                   android:layout_margin="5dp"
                                   android:id="@+id/match_type"/>-->

            <TextView
                android:id="@+id/metric_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_view_padding"
                android:text="@string/metric" />

            <Spinner
                android:id="@+id/metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_view_padding" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_view_padding"
        android:text="@string/show_results" />
</LinearLayout>